--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.13.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
-    "react-select": "^5.8.0"
+    "react-select": "^5.8.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
