--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-DB_DRIVER=mysql
+DB_DRIVER=sqlite
 DB_HOST=127.0.0.1
-DB_DATABASE=
+DB_DATABASE=mvc.sqlite
 DB_USERNAME=
 DB_PASSWORD=
 DB_CHARSET=utf8
